# festo-coding-challenge-2023

./: .gitignore  CMakeLists.txt  README.md
chapter1/: puzzle1.cpp  puzzle2.cpp  puzzle3.cpp
chapter2/: puzzle1.cpp  puzzle2.cpp  puzzle3.cpp
chapter3/: puzzle1.cpp  puzzle2.cpp  puzzle3.cpp
final/: puzzle1.cpp  puzzle1_.cpp  puzzle2.cpp  puzzle3.cpp
tutorial/: puzzle1.cpp  puzzle2.cpp  puzzle3.cpp
utils/: decoder.cpp  decoder.h  fraction.cpp  fraction.h  keyTools.cpp  keyTools.h
